After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 684966 - Error changing keyring password
Error changing keyring password
Status: RESOLVED FIXED
Product: seahorse
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Seahorse Maintainer
Seahorse Maintainer
Depends on:
Blocks:
 
 
Reported: 2012-09-27 14:49 UTC by David Zeuthen (not reading bugmail)
Modified: 2012-10-15 03:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gkr: Fix regression for changing keyring password (1.68 KB, patch)
2012-10-13 13:00 UTC, Stef Walter
committed Details | Review
Strip possible dbus errors before displaying (3.23 KB, patch)
2012-10-13 13:08 UTC, Stef Walter
committed Details | Review

Description David Zeuthen (not reading bugmail) 2012-09-27 14:49:29 UTC
When trying to change the passphrase of the login keyring I'm presented with an error like this

 primary: Couldn't change keyring password
 secondary: GDBus.Error:org.freedesktop.Secret.Error.NoSuchObject: The collection does not exist

As mentioned on IRC you should also use

 http://developer.gnome.org/gio/unstable/gio-GDBusError.html#g-dbus-error-strip-remote-error

to strip the GDBus error parts from the message.
Comment 1 Stef Walter 2012-10-13 13:00:57 UTC
Created attachment 226374 [details] [review]
gkr: Fix regression for changing keyring password

 * Changing a keyring password was failing with 'The collection does
   not exist'.
 * Use the correct DBus object path when changing the keyring password.
Comment 2 Stef Walter 2012-10-13 13:08:20 UTC
Created attachment 226375 [details] [review]
Strip possible dbus errors before displaying

 * It's dumb that we need to strip error messages to prevent
   DBus error names from leaking to the user. But do this anyway
   now that we're using libsecret, which uses GDBus.
Comment 3 Antoine Jacoutot 2012-10-14 08:16:03 UTC
Hi Stef.

FWIW I ran into the same issue as David and your patches fixed it.
Thank you.
Comment 4 Stef Walter 2012-10-15 03:58:25 UTC
Attachment 226374 [details] pushed as 4a29700 - gkr: Fix regression for changing keyring password
Attachment 226375 [details] pushed as 60e7f1b - Strip possible dbus errors before displaying
Comment 5 Stef Walter 2012-10-15 03:59:03 UTC
(In reply to comment #3)
> FWIW I ran into the same issue as David and your patches fixed it.
> Thank you.

Thanks for testing.

Pushed patches to gnome-3-6 branch.