gkr: Fix regression for changing keyring password

* Changing a keyring password was failing with 'The collection does
   not exist'.
 * Use the correct DBus object path when changing the keyring password.

https://bugzilla.gnome.org/show_bug.cgi?id=684966